@startuml

!define COMMON #C1DFC4-DEECDD
!define ENTITY_ICON #ABECD6

skinparam class {
    BorderColor Black
    ArrowColor Black
}

package "Healthya LINE Campaign" as application {
  entity "users" <<E, ENTITY_ICON>> COMMON {
    + id: bigint(20) [PK]
    ==
    * uid: string
    gender: string
    birthday: string
    height: number
    weight: number
    waist_circumference: number
    offal_fat: number
    is_entry_contest: boolean
    bodygram_id: string
    rank: number
    created_at: datetime
    updated_at: datetime
  }

  entity "estimation_logs" <<E, ENTITY_ICON>> COMMON {
    + id: bigint(20) [PK]
    ==
    # uid: string
    # rid: string
    status: string
    waist_circumference: number
    offal_fat: number
    wc_diff: number
    of_diff: number
    week: number
    created_at: datetime
    updated_at: datetime
  }

  entity "line_points" <<E, ENTITY_ICON>> COMMON {
    + id: bigint(20) [PK]
    ==
    # uid: string
    point: integer
    point_url: string
    created_at: datetime
    updated_at: datetime
  }

  entity "amazon_coupons" <<E, ENTITY_ICON>> COMMON {
    + id: bigint(20) [PK]
    ==
    # uid: string
    point: integer
    point_url: string
    created_at: datetime
    updated_at: datetime
  }
}

users ---o{ estimation_logs
users }o--o{ line_points
users }o--o{ amazon_coupons

@enduml
